--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,10 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --header-font-color: #DB00FF;
+  --header-font-shadow: #FF0070;
+  --hover-color: #ff99c6;
+  --background-color: #000028;
+  --section-text-color: #F1B2CE;
+}
