--- a/styles/style.css
+++ b/styles/style.css
@@ -13,15 +13,11 @@
   background-image: var(--backgroung-img);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   height: 100vh;
 }
 
-/*@media (width > 375px) {
-  .header {
-    padding: 20px;
-  }
-}*/
+
 
 /*уголки и рек*/
 
@@ -72,22 +68,6 @@
   top: 10px;
 }
 
-/*@media (width > 375px) {
-  .decorated__rec {
-    inset-inline-end: 29px;
-  }
-
-  .decorated-zone::after {
-    right: 20px;
-    top: 20px;
-  }
-
-  .decorated-zone::before {
-    left: 20px;
-    bottom: 20px;
-  }
-}*/
-
 /*ноу фокус хедер*/
 
 .header__name {
@@ -100,24 +80,6 @@
   margin-block-start: 70px;
   margin-block-end: 56px;
   }
-
-    /*АДАПТИВ СДЕЛАТЬ
-
-  @media (width > 375px) {
-    .header__name {
-      margin-block-start: 174px;
-      margin-block-end: 162px;
-    }
-  }
-      АДАПТИВ СДЕЛАТЬ
-
-  @media (width >= 768) {
-    .header__name {
-      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
-      margin-block-start: 319px;
-      margin-block-end: 114px;
-    }
-  } */
 
 /*описаие хедера с бекграундом*/
 
@@ -132,25 +94,11 @@
   background-color: var(--background-text-color);
   margin-block-end: 66px;
 }
-/*
-@media (width > 375px) {
-  .header_desc {
-    АДАПТИВ СДЕЛАТЬ
-  }
-}
-
-@media (width > 768) {
-  .header_desc {
-        АДАПТИВ СДЕЛАТЬ
-
-  }
-}*/
 
 /*список кнопок темы*/
 
 .header__theme-menu {
   margin-block-start: 65px;
-
 }
 
 .header__theme-menu-list {
@@ -159,17 +107,6 @@
   align-items: flex-end;
   gap: 17px;
 }
-
-/*@media (width > 768) {
-
-  .header__theme-menu {
-    margin-block-start: 20px;
-  }
-  .header__theme-menu-list {
-  flex-direction: row;
-  justify-content: center;
-  }
-} */
 
 .header__theme-menu-button {
   color: var(--button-color);
@@ -196,6 +133,43 @@
 
 .header__theme-menu-button_active {
   outline: 1px solid var(--button-color);
+}
+
+/*АДАПТИВ Планшет Шапка*/
+@media (width >= 768px) {
+  .header {
+    padding: 20px;
+  }
+
+  .decorated__rec {
+    inset-inline-end: 29px;
+  }
+
+  .decorated-zone::after {
+    right: 20px;
+    top: 20px;
+  }
+
+  .decorated-zone::before {
+    left: 20px;
+    bottom: 20px;
+  }
+
+
+  .header__theme-menu {
+    margin-block-start: 175px;
+  }
+
+  .header__name {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
+    margin-block-start: 174px;
+    margin-block-end: 162px;
+    margin-inline-start: -20px;
+  }
+
+  .header_desc {
+    margin-inline-start: 47.40vw;
+  }
 }
 
 /*main*/
@@ -253,11 +227,56 @@
   gap: 10px;
 }
 
-/*.section__image {
+/*АДАПТИВ секции с текстом планшет*/
 
-}*/
+@media (width >= 768px) {
+  .main {
+    padding: 0 20px;
+    margin-block-start: 60px;
+  }
 
-/*footer*/
+
+  .section {
+    margin-block-end: 80px;
+  }
+
+  .section:nth-child(1),
+  .section:nth-child(3) {
+    /*display: flex;
+    flex-direction: row;*/
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    margin-block-end: 60px;
+  }
+
+  .section_title {
+    width: clamp(236px, calc(100% / 3.25), 315px) ;
+  }
+
+}
+
+
+/*АДАПТИВ секции с изображениями планшет
+
+@media (width >= 768px) {
+  
+  .section_w_images {
+
+
+  .section__image::nth-child(1),
+  .section__image::nth-child(5) {
+    grid-column-start: span 2;
+  }
+
+  .section__image:nth-child(2),
+  .section__image:nth-child(3) {
+    grid-row-start: span 2;
+  }
+
+}
+
+footer*/
 
 .footer {
   /*padding: 10px;*/
@@ -280,4 +299,3 @@
   line-height: 82.5%;
   text-align: center;
 }
-
