--- a/styles/style.css
+++ b/styles/style.css
@@ -242,8 +242,6 @@
 
   .section:nth-child(1),
   .section:nth-child(3) {
-    /*display: flex;
-    flex-direction: row;*/
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 20px;
@@ -257,29 +255,56 @@
 }
 
 
-/*АДАПТИВ секции с изображениями планшет
+/*АДАПТИВ секции с изображениями планшет*/
 
 @media (width >= 768px) {
-  
+
   .section_w_images {
-
-
-  .section__image::nth-child(1),
-  .section__image::nth-child(5) {
-    grid-column-start: span 2;
+    margin-top: 20px;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    height: 100vw;
   }
 
-  .section__image:nth-child(2),
+  .section__image {
+    object-fit: cover;
+    max-width: 100%;
+    height: 100%;
+  }
+
+  .section__image:nth-child(1) {
+    grid-column: 1 / 3 ;
+    grid-row: 1 / 2;
+  }
+
+  .section__image:nth-child(2) {
+    grid-column: 3 / 4 ;
+    grid-row: 1 / 3 ;
+  }
+
   .section__image:nth-child(3) {
-    grid-row-start: span 2;
+    grid-column: 1 / 2 ;
+    grid-row: 2 / 4 ;
   }
 
-}
+  .section__image:nth-child(4) {
+    grid-column: 2 / 3 ;
+    grid-row: 2 / 3 ;
+  }
 
-footer*/
+  .section__image:nth-child(5) {
+    grid-column: 2 / 4 ;
+    grid-row: 3 / 4 ;
+  }
+
+
+  }
+
+/*footer*/
 
 .footer {
-  /*padding: 10px;*/
   position: relative;
   display: flex;
   padding: 10px;
@@ -287,6 +312,7 @@ footer*/
   justify-content: center;
   align-items: center;
   height: 100vh;
+  
   flex-shrink: 0;
 }
 
