--- a/styles/light.css
+++ b/styles/light.css
@@ -5,14 +5,13 @@
 */
 
 .page.theme_light {
-  --h1-font-color: #FFC2E6;
+  --header-font-color: #FFC2E6;
   --accent-color: #FF8DCB;
   --background-color: #FFF1F7;
   --hover-color: var(--font-color);
   --font-color: #353430;
   --titeles-font-color: #353430;
 
-  --header-font-color: var(--h1-font-color);
   --header-font-shadow: var(--accent-color);
   --section-text-color: var(--font-color);
   --button-color: var(--font-color);
@@ -22,26 +21,24 @@
   --font-wbg-color: var(--font-color);
   --shadow-link-color: var(--accent-color);
   --backgroung-img: url(../images/cover-image-light.png);
+  --decorated-color:var(--button-color);
 }
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
 
-  .page.theme_light .decorated__rec {
-    display: none;
-}
+
 
 @media (prefers-color-scheme: light) {
   :root {
-  --h1-font-color: #FFC2E6;
+  --header-font-color: #FFC2E6;
   --accent-color: #FF8DCB;
   --background-color: #FFF1F7;
   --hover-color: var(--font-color);
   --font-color: #353430;
   --titeles-font-color: #353430;
 
-  --header-font-color: var(--h1-font-color);
   --header-font-shadow: var(--accent-color);
   --section-text-color: var(--font-color);
   --button-color: var(--font-color);
@@ -51,5 +48,10 @@
   --font-wbg-color: var(--font-color);
   --shadow-link-color: var(--accent-color);
   --backgroung-img: url(../images/cover-image-light.png);
+  --decorated-color:var(--button-color);
     }
+}
+
+.page.theme_light .decorated__rec {
+  display: none;
 }
