--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
   background-repeat: no-repeat;
   background-size: cover; */
   height: 100vh;
-  min-height: 668px;
+  /*min-height: 668px;*/
 }
 
 
@@ -234,7 +234,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  min-height: 668px;
+  /*min-height: 668px;*/
   flex-shrink: 0;
 }
 
