--- a/styles/light.css
+++ b/styles/light.css
@@ -28,9 +28,7 @@
     чем стили в медиазапросе предпочтений пользователя
   */
 
-
-
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {s
   :root {
   --header-font-color: #FFC2E6;
   --accent-color: #FF8DCB;
@@ -49,7 +47,11 @@
   --shadow-link-color: var(--accent-color);
   --backgroung-img: url(../images/cover-image-light.png);
   --decorated-color:var(--button-color);
-    }
+  }
+
+  .decorated__rec {
+    display: none;
+}
 }
 
 .page.theme_light .decorated__rec {
