--- a/styles/light.css
+++ b/styles/light.css
@@ -5,14 +5,14 @@
 */
 
 .page.theme_light {
-  --header-font-color: #FFC2E6;
-  --accent-color: #FF8DCB;
-  --background-color: #FFF1F7;
+  --header-font-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --background-color: #fff1f7;
   --hover-color: rgba(50, 49, 45, 0.4);
   --font-color: #353430;
   --titeles-font-color: #353430;
 
-  --header-font-shadow: #FF0070;
+  --header-font-shadow: #ff0070;
   --section-text-color: var(--font-color);
   --button-color: var(--font-color);
   --rec-color: var(--font-color);
@@ -21,37 +21,37 @@
   --font-wbg-color: var(--font-color);
   --shadow-link-color: var(--accent-color);
   --backgroung-img: url(../images/cover-image-light.png);
-  --decorated-color:var(--button-color);
+  --decorated-color: var(--button-color);
 }
-  /* сохраните этот селектор в приведённом виде.
+/* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
 
 @media (prefers-color-scheme: light) {
   :root {
-  --header-font-color: #FFC2E6;
-  --accent-color: #FF8DCB;
-  --background-color: #FFF1F7;
-  --hover-color: rgba(50, 49, 45, 0.4);
-  --font-color: #353430;
-  --titeles-font-color: #353430;
+    --header-font-color: #ffc2e6;
+    --accent-color: #ff8dcb;
+    --background-color: #fff1f7;
+    --hover-color: rgba(50, 49, 45, 0.4);
+    --font-color: #353430;
+    --titeles-font-color: #353430;
 
-  --header-font-shadow: var(--accent-color);
-  --section-text-color: var(--font-color);
-  --button-color: var(--font-color);
-  --rec-color: var(--font-color);
-  --background-text-color: var(--accent-color);
-  --sctiteles-font-color: var(--font-color);
-  --font-wbg-color: var(--font-color);
-  --shadow-link-color: var(--accent-color);
-  --backgroung-img: url(../images/cover-image-light.png);
-  --decorated-color:var(--button-color);
+    --header-font-shadow: var(--accent-color);
+    --section-text-color: var(--font-color);
+    --button-color: var(--font-color);
+    --rec-color: var(--font-color);
+    --background-text-color: var(--accent-color);
+    --sctiteles-font-color: var(--font-color);
+    --font-wbg-color: var(--font-color);
+    --shadow-link-color: var(--accent-color);
+    --backgroung-img: url(../images/cover-image-light.png);
+    --decorated-color: var(--button-color);
   }
 
   .decorated__rec {
     display: none;
-}
+  }
 }
 
 .page.theme_light .decorated__rec {
