--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  font-family: 'IBM Plex mono', sans-serif;
+  font-family: "IBM Plex mono", sans-serif;
   background-color: var(--background-color);
   background-image: var(--backgroung-img);
   background-repeat: no-repeat;
@@ -23,7 +23,7 @@
   grid-template-rows: 1fr min-content 1fr;
   align-items: center;
   height: 100%;
-  }
+}
 
 /*уголки и рек*/
 
@@ -89,7 +89,7 @@
   font-style: normal;
   line-height: 82.5%;
   text-shadow: 4px 4px 0px var(--header-font-shadow);
-  }
+}
 
 /*описание хедера с бекграундом*/
 
@@ -130,11 +130,11 @@
 
 .header__theme-menu-button:focus {
   border-bottom: 1px solid var(--button-color);
-  outline: none ;
+  outline: none;
 }
 
 .header__theme-menu-button:focus-visible {
-  outline: none ;
+  outline: none;
 }
 
 .header__theme-menu-button_active {
@@ -159,12 +159,15 @@
 
 .section_title,
 .list_title,
-.section_item {
+.section_item,
+.section_item_text {
   margin-block-end: 20px;
 }
 
-.section_item:last-child {
-  margin-block-end: 0px;
+.section_item:last-child,
+.section_item_text:last-child,
+.section_title:last-child {
+  margin-bottom: 0px;
 }
 
 .section_item_title,
@@ -178,7 +181,7 @@
   font-weight: 700;
   font-size: 18px;
   font-style: normal;
-  line-height: 130% ;
+  line-height: 130%;
 }
 
 .section_title {
@@ -192,7 +195,7 @@
 
 .list_title {
   color: var(--titeles-font-color);
-  background-color: var(--background-text-color) ;
+  background-color: var(--background-text-color);
 }
 
 .section_list_title {
@@ -252,7 +255,6 @@
 /*АДАПТИВ ПЛАНШЕТ*/
 
 @media (width >= 768px) {
-  
   /*Планшет Шапка*/
 
   .header {
@@ -282,21 +284,20 @@
     display: flex;
     align-items: center;
     margin-inline-start: -20px;
-    font-size: var(--header-size-latop) ;
+    font-size: var(--header-size-latop);
   }
 
   .header_desc {
     justify-self: end;
-    width: clamp(364px, 47.8vw, 491px) ;
+    width: clamp(364px, 47.8vw, 491px);
   }
 
-/*секции с текстом */
+  /*секции с текстом */
 
   .main {
     margin-block-start: 60px;
     padding: 0 20px;
   }
-
 
   .section {
     margin-block-end: 80px;
@@ -313,62 +314,67 @@
   }
 
   .section_title {
-    width: clamp(236px, calc(100% / 3.25), 315px) ;
+    width: clamp(236px, calc(100% / 3.25), 315px);
+  }
+
+  .section_barview .section_title {
+    margin-block-end: 0;
+  }
+
+  .image_title {
+    margin-block-end: 20px;
   }
 
   .row_article_list {
     margin-block-end: 80px;
   }
-  
-/*секции с изображениями планшет*/
+
+  /*секции с изображениями планшет*/
 
   .section_with_images {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     height: 100vw;
-    margin-top: 20px;
     grid-gap: 20px;
   }
 
   .section__image:nth-child(1) {
-    grid-column: 1 / 3 ;
+    grid-column: 1 / 3;
     grid-row: 1 / 2;
   }
 
   .section__image:nth-child(2) {
-    grid-column: 3 / 4 ;
-    grid-row: 1 / 3 ;
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
   }
 
   .section__image:nth-child(3) {
-    grid-column: 1 / 2 ;
-    grid-row: 2 / 4 ;
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
   }
 
   .section__image:nth-child(4) {
-    grid-column: 2 / 3 ;
-    grid-row: 2 / 3 ;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
   }
 
   .section__image:nth-child(5) {
-    grid-column: 2 / 4 ;
-    grid-row: 3 / 4 ;
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
   }
 
-/*ФУТЕР*/
+  /*ФУТЕР*/
 
-.footer-name {
-  font-size: var(--header-size-latop) ;
-}
-
+  .footer-name {
+    font-size: var(--header-size-latop);
+  }
 }
 
 /*АДАПТИВ ДЕСКТОП*/
 
 @media (width >= 1024px) {
-
-/*ДЕСКТОП ШАПКА*/
+  /*ДЕСКТОП ШАПКА*/
 
   .header__theme-menu {
     display: flex;
@@ -382,21 +388,16 @@
     gap: 10px;
   }
 
-/*секции с текстом*/
-
-.main {
-  margin-block-start: 60px;
-}
+  /*секции с текстом*/
 
   .section_barview {
     display: grid;
-    grid-template-columns: 1fr 2fr;
     gap: 13px;
     margin-block-end: 80px;
   }
 
   .section_title {
-    width: 31vw ;
+    width: 31vw;
   }
 
   .row_article_list {
@@ -404,14 +405,14 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
-    }
+  }
 
-    .row_article_list .section_item {
-      flex: 1 1 25vw;
-    }
+  .row_article_list .section_item {
+    flex: 1 1 25vw;
+    margin-block-end: 0;
+  }
 
-    .section:last-child {
-      margin-block-end: 83px;
-    }
-
+  .section:last-child {
+    margin-block-end: 83px;
+  }
 }
